<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_vocabularylearning"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/learning_vocabulary"/>
        <item
            android:id="@+id/nav_vocabulayquiz"
            android:icon="@drawable/quiz_24"
            android:title="@string/vocabulary_quiz"/>

        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow"/>

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_logout_24px"
            android:title="@string/SignOut"/>
    </group>
</menu>