<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.littlelingo.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_vocabularylearning"
            android:name="com.example.littlelingo.ui.learningvocabulary.LearningVocabulary"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_learning_vocabulary"/>

    <fragment
        android:id="@+id/nav_grammarLearning"
        android:name="com.example.littlelingo.ui.Learningrammar.learningGrammar"
        android:label="Learning Grammar"
        tools:layout="@layout/fragment_learning_grammar"/>

    <fragment
        android:id="@+id/nav_vocabulayquiz"
        android:name="com.example.littlelingo.ui.vocabularyquiz.VocabularyQuiz"
        android:label="Vocabulary Quiz"
        tools:layout="@layout/fragment_vocabulary_quiz">
<!--        <action-->
<!--            android:id="@+id/action_vocabularyQuiz_to_resultVocabulary"-->
<!--            app:destination="@id/nav_vocabularyresult" />-->

    </fragment>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.littlelingo.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.example.littlelingo.ui.shopping.ShoppingPage"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_shopping_page"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.littlelingo.ui.user.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>