<?xml version="1.0" encoding="utf-8"?>
    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".ui.learningvocabulary.LearningVocabulary">-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:fillViewport="true"
    android:background="@color/backgroundColor"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="70dp">

        <EditText
            android:id="@+id/et_wordname"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:background="@color/secondaryColor"
            android:hint="@string/enter_word_name"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="" />

        <Spinner
            android:id="@+id/wordTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#363A43"
            android:hint="Select the word type"
            android:textSize="22sp"
            android:spinnerMode="dropdown" />



        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="#D0D0D0">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_preview"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Add Image"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:background="@android:color/transparent" />
        </FrameLayout>
        <EditText
            android:id="@+id/et_exampleSentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:hint="@string/enter_an_example_sentences"
            tools:text=""
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_uploadAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:hint="Choose an audio"
            tools:text=""
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@color/primaryColor"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            android:textSize="16dp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btn_addWord"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="Add"
            android:textColor="@color/textColor"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            />

        </LinearLayout>

    </LinearLayout>
</ScrollView>